# stage0-bazel

./: MODULE.bazel  README.md  WORKSPACE.bazel
tools/: defs.bzl
tools/mes/: BUILD.bazel
tools/stage0/: BUILD.bazel  bloodelf.bzl  catm.bzl  cc.bzl  hex0.bzl  hex1.bzl  hex2.bzl  hex2_1.bzl  m0.bzl  m1.bzl  m2.bzl  m2_planet.bzl  providers.bzl  toolchain.bzl  toolchains.bzl
tools/stage0/phase0/: BUILD.bazel
tools/stage0/phase1/: BUILD.bazel
tools/stage0/phase10/: BUILD.bazel
tools/stage0/phase12/: BUILD.bazel
tools/stage0/phase13/: BUILD.bazel
tools/stage0/phase14/: BUILD.bazel
tools/stage0/phase15/: BUILD.bazel
tools/stage0/phase2/: BUILD.bazel
tools/stage0/phase3/: BUILD.bazel
tools/stage0/phase4/: BUILD.bazel
tools/stage0/phase5/: BUILD.bazel
tools/stage0/phase6/: BUILD.bazel
tools/stage0/phase7/: BUILD.bazel
tools/stage0/phase8/: BUILD.bazel
tools/stage0/phase9/: BUILD.bazel
tools/stage1/: BUILD.bazel  M0.bzl  cat.bzl  hex1.bzl  hex2.bzl
tools/stage2/: BUILD.bazel  cc.bzl
tools/stage3/: BUILD.bazel  M2.bzl  toolchain.bzl
