load(":M2.bzl", "M2_binary")
load(":toolchain.bzl", "M2_toolchain")

# This is our toolchain type for the M2 toolchain.
toolchain_type(
    name = "M2_toolchain_type",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "M2_linux_x86_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":M2_linux_x86",
    toolchain_type = ":M2_toolchain_type",
)

M2_toolchain(
    name = "M2_linux_x86",
    architecture = "x86",
    compiler = "//tools/stage2:M2",
    M1_defs = "@M2libc//:x86/x86_defs.M1",
    M1_libc_core = "@M2libc//:x86/libc-core.M1",
    ELF_header = "@M2libc//:x86/ELF-x86.hex2",
)

M2_binary(
    name = "blood-elf-0",
    srcs = select(
        {
            "@bazel_tools//src/conditions:linux_x86_64": [
                # do not sort
                "@M2libc//:x86/linux/bootstrap.c",
            ],
        },
    ) + [
        "@M2libc//:bootstrappable.c",
        "@mescc-tools//:stringify.c",
        "@mescc-tools//:blood-elf.c",
    ],
)
