"""Phase 10 for Stage0: Build hex2 from C sources 

"""

load("//tools/stage0:hex2_1.bzl", "hex2_binary")
load("//tools/stage0:m1.bzl", "m1_expand")
load("//tools/stage0:m2.bzl", "m2_compile")

package(
    default_visibility = ["//visibility:public"],
)

m2_compile(
    name = "hex2_linker-2.M1",
    srcs = [ 
        # do not sort
        "@M2libc//:sys/types.h",
        "@M2libc//:stddef.h",
        "@M2libc//:sys/utsname.h",
    ] + 
    select(
        {
            "@bazel_tools//src/conditions:linux_x86_64": [
                # do not sort
                "@M2libc//:x86/linux/unistd.c",
                "@M2libc//:x86/linux/fcntl.c",
            ],
        },
    ) + [
        "@M2libc//:fcntl.c",
    ] + select(
        {
            "@bazel_tools//src/conditions:linux_x86_64": [
                # do not sort
                "@M2libc//:x86/linux/sys/stat.c",
            ],
        },
    ) + [
        # do not sort
        "@M2libc//:stdlib.c",
        "@M2libc//:stdio.h",
        "@M2libc//:stdio.c",
        "@M2libc//:bootstrappable.c",
        "@mescc-tools//:hex2.h",
        "@mescc-tools//:hex2_linker.c",
        "@mescc-tools//:hex2_word.c",
        "@mescc-tools//:hex2.c",
    ],
    architecture = select({
        "@bazel_tools//src/conditions:linux_x86_64": "x86",
    }),
)

m1_expand(
    name = "hex2_linker-2.hex2",
    srcs = select(
        {
            "@bazel_tools//src/conditions:linux_x86_64": [
                # do not sort
                "@M2libc//:x86/x86_defs.M1",
                "@M2libc//:x86/libc-full.M1",
            ],
        },
    ) + [
        ":hex2_linker-2.M1",
    ],
    architecture = select({
        "@bazel_tools//src/conditions:linux_x86_64": "x86",
    }),
    is_little_endian = select({
        "@bazel_tools//src/conditions:linux_x86_64": True,
    }),
    tool = "//tools/stage0/phase9:M1"
)

hex2_binary(
    name = "hex2",
    srcs = select(
        {
            "@bazel_tools//src/conditions:linux_x86_64": [
                # do not sort
                "@M2libc//:x86/ELF-x86.hex2",
            ],
        },
    ) + [
        ":hex2_linker-2.hex2",
    ],
    base_address = "0x8048000",
    architecture = select({
        "@bazel_tools//src/conditions:linux_x86_64": "x86",
    }),
    is_little_endian = select({
        "@bazel_tools//src/conditions:linux_x86_64": True,
    }),
    tool = "//tools/stage0/phase8:hex2-1"
)
