"""Phase 14 for Stage0: Build get_machine from C source

"""

load("//tools/stage0:hex2_1.bzl", "hex2_binary")
load("//tools/stage0:m1.bzl", "m1_expand")
load("//tools/stage0:m2.bzl", "m2_compile")
load("//tools/stage0:bloodelf.bzl", "blood_elf")

package(
    default_visibility = ["//visibility:public"],
)

m2_compile(
    name = "get_machine.M1",
    srcs = [ 
        # do not sort
        "@M2libc//:sys/types.h",
        "@M2libc//:stddef.h",
        "@M2libc//:sys/utsname.h",
    ] + 
    select(
        {
            "@bazel_tools//src/conditions:linux_x86_64": [
                # do not sort
                "@M2libc//:x86/linux/unistd.c",
                "@M2libc//:x86/linux/fcntl.c",
            ],
        },
    ) + [
        # do not sort
        "@M2libc//:fcntl.c",
        "@M2libc//:stdlib.c",
        "@M2libc//:stdio.h",
        "@M2libc//:stdio.c",
        "@M2libc//:bootstrappable.c",
        "@mescc-tools//:get_machine.c",
    ],
    architecture = select({
        "@bazel_tools//src/conditions:linux_x86_64": "x86",
    }),
    is_debug = True,
)

blood_elf(
    name = "get_machine-footer.M1",
    src = ":get_machine.M1",
    is_little_endian = select({
        "@bazel_tools//src/conditions:linux_x86_64": True,
    }),
)

m1_expand(
    name = "get_machine.hex2",
    srcs = select(
        {
            "@bazel_tools//src/conditions:linux_x86_64": [
                # do not sort
                "@M2libc//:x86/x86_defs.M1",
                "@M2libc//:x86/libc-full.M1",
            ],
        },
    ) + [
        ":get_machine.M1",
        ":get_machine-footer.M1",
    ],
    architecture = select({
        "@bazel_tools//src/conditions:linux_x86_64": "x86",
    }),
    is_little_endian = select({
        "@bazel_tools//src/conditions:linux_x86_64": True,
    }),
    tool = "//tools/stage0/phase9:M1"
)

hex2_binary(
    name = "get_machine",
    srcs = select(
        {
            "@bazel_tools//src/conditions:linux_x86_64": [
                # do not sort
                "@M2libc//:x86/ELF-x86.hex2",
            ],
        },
    ) + [
        ":get_machine.hex2",
    ],
    base_address = "0x8048000",
    architecture = select({
        "@bazel_tools//src/conditions:linux_x86_64": "x86",
    }),
    is_little_endian = select({
        "@bazel_tools//src/conditions:linux_x86_64": True,
    }),
    tool = "//tools/stage0/phase8:hex2-1"
)
