"""Phase 6 for Stage0: Build blood-elf-0 from C sources 

"""

load("//tools/stage0:m2.bzl", "m2_compile")
load("//tools/stage0:catm.bzl", "cat_files")
load("//tools/stage0:hex2.bzl", "hex2_binary")
load("//tools/stage0:m0.bzl", "m0_expand")

m2_compile(
    name = "blood-elf-0.M1",
    srcs = select(
        {
            "@bazel_tools//src/conditions:linux_x86_64": [
                # do not sort
                "@M2libc//:x86/linux/bootstrap.c",
            ],
        },
    ) + [
        "@M2libc//:bootstrappable.c",
        "@mescc-tools//:blood-elf.c",
        "@mescc-tools//:stringify.c",
    ],
    architecture = select({
        "@bazel_tools//src/conditions:linux_x86_64": "x86",
    }),
    is_bootstrap = True,
)

m0_expand(
    name = "blood-elf-0.hex2",
    srcs = select(
        {
            "@bazel_tools//src/conditions:linux_x86_64": [
                # do not sort
                "@stage0-x86//:x86_defs.M1",
                "@stage0-x86//:libc-core.M1",
            ],
        }) + [
            ":blood-elf-0.M1",
        ],
)

hex2_binary(
    name = "blood-elf-0",
    srcs = select(
        {
            "@bazel_tools//src/conditions:linux_x86_64": [
                # do not sort
                "@M2libc//:x86/ELF-x86.hex2",
            ],
        }) + [
            ":blood-elf-0.hex2",
        ],
)