"""Phase 7 for Stage0: Build M1-0 from C sources 

This is the last stage where catm will need to be used and the last stage where
M0 is used, as we will being using its much more powerful and cross-platform
version with a bunch of extra goodies.
"""

load("//tools/stage0:m2.bzl", "m2_compile")
load("//tools/stage0:hex2.bzl", "hex2_binary")
load("//tools/stage0:m0.bzl", "m0_expand")

package(
    default_visibility = ["//visibility:public"],
)

m2_compile(
    name = "M1-macro-0.M1",
    srcs = select(
        {
            "@bazel_tools//src/conditions:linux_x86_64": [
                # do not sort
                "@M2libc//:x86/linux/bootstrap.c",
            ],
        },
    ) + [
        "@M2libc//:bootstrappable.c",
        "@mescc-tools//:M1-macro.c",
        "@mescc-tools//:stringify.c",
    ],
    architecture = select({
        "@bazel_tools//src/conditions:linux_x86_64": "x86",
    }),
    is_bootstrap = True,
)

m0_expand(
    name = "M1-macro-0.hex2",
    srcs = select(
        {
            "@bazel_tools//src/conditions:linux_x86_64": [
                # do not sort
                "@stage0-x86//:x86_defs.M1",
                "@stage0-x86//:libc-core.M1",
            ],
        }) + [
            ":M1-macro-0.M1",
        ],
)

hex2_binary(
    name = "M1-0",
    srcs = select(
        {
            "@bazel_tools//src/conditions:linux_x86_64": [
                # do not sort
                "@M2libc//:x86/ELF-x86.hex2",
            ],
        }) + [
            ":M1-macro-0.hex2",
        ],
)